# triage-vision-android

./: .gitignore  BUILDING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/fast_pipeline/: depth_processor.cpp  depth_processor.h  motion_analyzer.cpp  motion_analyzer.h  pose_estimator.cpp  pose_estimator.h  yolo_detector.cpp  yolo_detector.h
app/src/main/cpp/jni/: native_bridge.cpp
app/src/main/cpp/slow_pipeline/: image_processor.cpp  image_processor.h  vlm_inference.cpp  vlm_inference.h
app/src/main/java/com/triage/vision/: TriageVisionApp.kt
app/src/main/java/com/triage/vision/backend/: BackendRegistry.kt  OnnxBackend.kt  QnnBackend.kt  VisionBackend.kt
app/src/main/java/com/triage/vision/camera/: DepthCameraManager.kt  DepthFrameSynchronizer.kt  MediaPipePoseDetector.kt
app/src/main/java/com/triage/vision/charting/: AutoChartEngine.kt
app/src/main/java/com/triage/vision/classifier/: FastClassifier.kt  NursingLabels.kt
app/src/main/java/com/triage/vision/data/: AppDatabase.kt  ObservationDao.kt  ObservationEntity.kt  ObservationRepository.kt
app/src/main/java/com/triage/vision/native/: NativeBridge.kt
app/src/main/java/com/triage/vision/pipeline/: FastPipeline.kt  SlowPipeline.kt
app/src/main/java/com/triage/vision/service/: MonitoringService.kt  VlmEventScheduler.kt
app/src/main/java/com/triage/vision/ui/: MainActivity.kt  MonitoringViewModel.kt
app/src/main/java/com/triage/vision/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/triage/vision/backend/: BackendRegistryTest.kt
app/src/test/java/com/triage/vision/charting/: AutoChartEngineTest.kt
app/src/test/java/com/triage/vision/service/: VlmEventSchedulerTest.kt
docs/: ARCHITECTURE.md  SETUP.md
scripts/: build_native_libs.sh  download_models.sh  export_mobileclip.py
